--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,7 @@
             }
 
             .container {
-                background: white;
+                background: brown;
                 padding: 30px;
                 border-radius: 10px;
                 box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
